transaction/fixing overflowBug

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
-
+html{
+  overflow-x: hidden;
+}
 #navbar-icon{
   margin-left: auto;
   display: none;
@@ -26,7 +28,9 @@
 }
 
 .table-more-card-toggle{
-  padding: 30px 12px 30px 102px;
+  /*padding: 30px 12px 30px 102px;*/
+  padding: 30px 39px 30px 47px;;
+
   border-bottom: 1px solid #EFEFEF;
   opacity: 1;
   height: auto;
@@ -182,7 +186,7 @@
 .table-more-row-first{
   display: flex;
   align-items: center;
-  width: 224px;
+  width: 160px;
 }
 .table-more-row-first-img{
   position: relative;
@@ -232,17 +236,23 @@
   color: #39295A;
 }
 .table-more-row-second{
-  width: 140px;
+  width: 139px;
 }
 
 .table-more-row-third{
-  width: 109px;
+  width: 100px;
 }
 .table-more-row-fourth{
-  width: 143px;
+  width: 136px;
 }
 .table-more-row-fifth{
-  width: 118px;
+  width: 109px;
+}
+.table-more-row-sixth{
+  width: 90px;
+}
+.TableMoreLoading{
+  margin: 0 auto;
 }
 .table-more-second-4 h2 span{
   font-weight: 400;
@@ -852,13 +862,15 @@ table, th, td {
     color: rgba(56, 56, 56, 0.3);
   }
   .table-more-card-toggle {
-    padding: 30px 12px 30px 12px;
+    /*padding: 30px 12px 30px 12px;*/
+    padding: 30px 39px 30px 47px;
   }
   .table-tool-tip{
     width: auto;
   }
   .table-card-more{
-    padding: 30px 12px 30px 12px;
+    /*padding: 30px 12px 30px 12px;*/
+    padding: 0 39px 0 47px;
   }
   .table-more-row-content{
     width: auto;
@@ -938,7 +950,9 @@ table, th, td {
     color: rgba(56, 56, 56, 0.3);
   }
   .table-more-card-toggle {
-    padding: 30px 12px 30px 12px;
+    /*padding: 30px 12px 30px 12px;*/
+    padding: 30px 39px 30px 47px;
+
   }
   .table-tool-tip{
     width: auto;
